@startuml
' RentalApp — Component Diagram
' Generated from the repo structure (May 2026)

title RentalApp — Component Diagram
left to right direction

skinparam componentStyle rectangle
skinparam packageStyle rectangle
skinparam shadowing false

' ===== Solution / Projects ==================================================
package "RentalApp (MAUI Client)" as Maui {
  package "UI" as UI {
    component "Views\n(XAML Pages)" as Views
    component "Converters" as Converters
  }

  package "Presentation" as Presentation {
    component "ViewModels\n(MVVM)" as ViewModels
  }

  package "Services" as Services {
    component "Auth\n(IAuthenticationService)" as AuthService
    component "Navigation\n(INavigationService)" as NavigationService
    component "Location\n(ILocationService)" as LocationService
    component "Rental\n(IRentalService)" as RentalService
    component "Review\n(IReviewService)" as ReviewService

    component "AuthDelegatingHandler\n(attach bearer + handle 401)" as AuthHandler
    component "Token Storage\n(ITokenStorage)" as TokenStorage
  }

  component "HttpClient\n(BaseAddress = hosted API)" as HttpClient
  component "MAUI Platform APIs\n(SecureStorage, Geolocation, Maps)" as Platform
}

package "RentalApp.Database (Class Library)" as DatabaseLib {
  package "Models" as DbModelsPkg {
    component "Domain Models\n(User, Category, Item, Rental, Review)" as DomainModels
  }

  package "Queries" as DbQueriesPkg {
    component "Query DTOs\n(ItemQuery, RentalQuery, …)" as QueryDtos
  }

  package "Repositories" as Repositories {
    interface "ICategoryRepository" as ICategoryRepository
    interface "IItemRepository" as IItemRepository
    interface "IRentalRepository" as IRentalRepository
    interface "IReviewRepository" as IReviewRepository

    component "Api* Repositories\n(ApiCategoryRepository, ApiItemRepository,\n ApiRentalRepository, ApiReviewRepository)" as ApiRepos
    component "Db* Repositories\n(DbCategoryRepository, DbItemRepository,\n DbRentalRepository, DbReviewRepository)" as DbRepos
  }

  component "EF Core DbContext\n(AppDbContext)" as AppDbContext
  database "PostgreSQL" as Postgres
}

package "Tooling" as Tooling {
  component "RentalApp.Migrations\n(EF migrations runner)" as Migrations
  component "RentalApp.Tests\n(xUnit)" as Tests
}

cloud "Hosted API\nhttps://set09102-api.b-davison.workers.dev" as HostedApi

' ===== Intra-project relationships =========================================
Views --> ViewModels : data binding / commands
Views --> Converters

ViewModels --> AuthService
ViewModels --> NavigationService
ViewModels --> LocationService
ViewModels --> RentalService
ViewModels --> ReviewService

' Many ViewModels also call repositories directly for reads/writes
ViewModels ..> ICategoryRepository
ViewModels ..> IItemRepository
ViewModels ..> IRentalRepository
ViewModels ..> IReviewRepository

LocationService --> Platform : Geolocation
TokenStorage --> Platform : SecureStorage
Views --> Platform : Maps

AuthHandler --> TokenStorage
HttpClient --> AuthHandler

' Services depend on repository interfaces (implementations are DI selected)
RentalService ..> IRentalRepository
ReviewService ..> IReviewRepository

' Authentication service talks to the hosted API directly (shared-API mode)
AuthService --> HttpClient : shared API: /auth/*, /users/me
AuthService --> TokenStorage : persist/restore JWT
AuthService --> AuthHandler : subscribe (401 => sign out)

' Local/offline auth implementation is DB-backed (local-DB mode)
AuthService ..> AppDbContext : local mode (AuthenticationService)

' ===== Repository implementations ==========================================
ApiRepos ..|> ICategoryRepository
ApiRepos ..|> IItemRepository
ApiRepos ..|> IRentalRepository
ApiRepos ..|> IReviewRepository

DbRepos ..|> ICategoryRepository
DbRepos ..|> IItemRepository
DbRepos ..|> IRentalRepository
DbRepos ..|> IReviewRepository

ApiRepos --> HttpClient : HTTPS + JSON
HttpClient --> HostedApi

DbRepos --> AppDbContext
AppDbContext --> Postgres

' ===== Tooling =============================================================
Migrations --> AppDbContext : design-time EF migrations

Tests ..> ViewModels
Tests ..> Services
Tests ..> Repositories

note right of Maui
Data-source switch (see MauiProgram.cs):

- useSharedApi = true
  ViewModels/Services -> Api* Repositories -> Hosted API

- useSharedApi = false
  ViewModels/Services -> Db* Repositories -> AppDbContext -> PostgreSQL
end note

@enduml
